<resources>
    <string name="app_name">KABJ-APP</string>
    <string name="description_logo_company">Logo de la empresa</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="login_subtitle">Ingrese con su cuenta de la empresa</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="version_info">Versión 1.0.0 K.A.B.J</string>
    <string name="msg_error_username_required">Ingrese su usuario</string>
    <string name="msg_error_password_required">Ingrese su contraseña</string>
    <string name="msg_login_success">Login exitoso con:</string>
    <string name="text_welcome">Bienvenido</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <!-- Login -->
    <string name="msg_error_login_fields_required">Las credenciales son necesarias</string>
    <string name="txt_search_user">Buscando Usuario . . .</string>

    <!-- Navegation -->

    <string name="nav_home">Inicio</string>
    <string name="nav_title_work_orders">Ordenes de Trabajo</string>
    <string name="nav_register_work_orders">Registrar Ordenes de Trabajo</string>
    <string name="nav_consult_work_orders">Consultar Ordenes de Trabajo</string>
    <string name="nav_assign_work_orders">Asignar Ordenes de Trabajo</string>
    <string name="nav_list_work_orders">Lista de Ordenes de Trabajo\n</string>

    <!-- Home -->
    <string name="title_home">Inicio</string>

    <!-- Register Work Orders -->
    <string name="title_register_work_order">Registro de Ordenes de Trabajo</string>
    <string name="description_image_file_upload">Imagen representativo de un archivo de subida</string>
    <string name="drag_and_drop_or">Arrastra y suelta o</string>
    <string name="select_file">selecciona archivo</string>
    <string name="formats">Formatos: .xlsx, .xls</string>
    <string name="sub_title_uploaded_files">Subida de archivos</string>
    <string name="sub_title_uploaded_files_details">Detalles de Archivo subido</string>
    <string name="btn_process_files">Procesar archivo</string>
    <string name="description_image_excel">Imagen representativo de archivo excel</string>
    <string name="description_image_file_delete">Eliminar archivo</string>
    <string name="description_image_file_state">Imagen que indica el estado del archivo</string>

    <!-- Consult Work Orders -->
    <string name="title_consult_work_order">Consultar Ordenes de Trabajo</string>
    <string name="btn_consult_work_order">Buscar Orden de Trabajo</string>
    <string name="hint_number_work_order">Numero de Orden de Trabajo</string>
    <string name="subtitle_consult_work_order">Ingrese un Numero de Orden de Trabajo</string>
    <string name="msg_error_number_work_order_required">Ingrese el número de la orden</string>
    <string name="msg_error_number_work_order_invalid">Número inválido, solo números</string>

    <!-- Consult Work Orders Detail -->
    <string name="btn_return">Regresar</string>
    <string name="lbl_work_order_number">N° de Orden :</string>
    <string name="lbl_work_order_state">Estado :</string>
    <string name="lbl_title_locate">Ubicación</string>
    <string name="lbl_work_order_district">Distrito:</string>
    <string name="lbl_work_order_sector">Sector:</string>
    <string name="lbl_work_order_locality">Localidad:</string>
    <string name="lbl_work_order_address">Dirección:</string>
    <string name="lbl_title_date">Fechas</string>
    <string name="lbl_title_detail">Detalles</string>
    <string name="lbl_work_order_foreman">Capataz:</string>
    <string name="lbl_work_order_type">Tipo OT:</string>
    <string name="lbl_work_order_cost">Costo:</string>
    <string name="lbl_work_order_description">Descripción:</string>
    <string name="lbl_work_order_observation">Observación:</string>
    <string name="description_image_save_work_order">Boton de guardar cambios</string>
    <string name="lbl_work_order_start_date">Inicio:</string>
    <string name="lbl_work_order_estimated_end">Final estimado:</string>
    <string name="lbl_work_order_invoiced_date">Facturado:</string>
    <string name="lbl_work_order_scheduled_date">Programado:</string>
    <string name="lbl_work_order_pending_date">Pendiente:</string>
    <string name="lbl_work_order_working_date">Trabajando:</string>
    <string name="lbl_work_order_attended_date">Atendido:</string>
    <string name="lbl_work_order_completed_date">Completado:</string>
    <string name="lbl_work_order_resolved_date">Resuelto:</string>
    <string name="lbl_work_order_revised_date">Revisado:</string>
    <string name="lbl_work_order_canceled_date">Anulado:</string>

    <!-- Assign Work Order -->
    <string name="title_assign_work_order">Asignación de Ordenes de Trabajo</string>
    <string name="sub_title_selected_foreman">Seleccionar Capataz</string>
    <string name="hint_select_foreman">Seleccione un capataz\n</string>

    <!-- List Foreman Work Order -->
    <string name="title_foreman_work_order_list">Lista de Ordenes de Trabajo\n</string>
    <string name="sub_title_list_work_orders">Lista de Ordenes asiganados</string>
    <string name="nav_logout">Cerrar Sesión</string>
    <string name="nav_title_options">Opciones\n</string>

    <!-- Logout -->
    <string name="txt_logout_user">Cerrando sesión . . .</string>
    <string name="image_description_icon_modal">Icono de modal</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btnAccept">Aceptar</string>
    <string name="lbl_work_order_activity">Actividad:</string>
    <string name="lbl_work_order_sub_activity">Sub Actividad:</string>
    <string name="description_image_state">Imagen representativo del estado del Trabajo</string>
    <string name="title_item_work_order_number">OT#</string>
    <string name="title_item_work_order_start_date">F.I:</string>
    <string name="text_item_btn_see_detail">Ver</string>
    <string name="item_work_order_foreman_of">de</string>
    <string name="item_work_order_foreman_page">Página</string>
    <string name="item_work_order_foreman_previous">Anterior</string>
    <string name="item_work_order_foreman_next">Siguiente</string>

</resources>